--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -9,6 +9,8 @@ click==8.2.1
 cookiecutter==2.6.0
 Django==5.2.3
 djangorestframework==3.16.0
+fhir.resources==8.1.0
+fhir_core==1.1.3
 gunicorn==23.0.0
 idna==3.10
 Jinja2==3.1.6
