progress toward filters

--- a/src/.env_template
+++ b/src/.env_template
@@ -8,3 +8,4 @@ NDH_DB_ENGINE='django.db.backends.postgresql'
 DEBUG=True
 DJANGO_ALLOWED_HOSTS=['localhost', '127.0.0.1']
 DJANGO_LOGLEVEL='WARNING'
+NDH_PROJECT_NAME='[Project Name]'
