--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,7 @@
 anyio==4.9.0
 arrow==1.3.0
 asgiref==3.8.1
+bidict==0.23.1
 binaryornot==0.4.4
 certifi==2025.6.15
 chardet==5.2.0
@@ -8,6 +9,7 @@ charset-normalizer==3.4.2
 click==8.2.1
 cookiecutter==2.6.0
 Django==5.2.3
+django-filter==25.1
 djangorestframework==3.16.0
 fhir.resources==8.1.0
 fhir_core==1.1.3
