--- a/src/.env_template
+++ b/src/.env_template
@@ -9,3 +9,4 @@ DEBUG=True
 DJANGO_ALLOWED_HOSTS=['localhost', '127.0.0.1']
 DJANGO_LOGLEVEL='WARNING'
 NDH_PROJECT_NAME='[Project Name]'
+CACHE_LOCATION = ''
