--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -72,7 +72,7 @@ jobs:
         uses: CasperWA/push-protected@v2
         with:
           
-          token: ${{ secrets.PUSH_TO_PROTECTED_BRANCH }}
+          token: ${{ secrets.CONTRIBUTOR_TOKEN }}
           
 
           branch: main
