reverting fix bc of scope of PR
Signed-off-by: Sachin Panayil <sachinpanayil01@gmail.com>

--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -72,7 +72,7 @@ jobs:
         uses: CasperWA/push-protected@v2
         with:
           
-          token: ${{ secrets.CONTRIBUTOR_TOKEN }}
+          token: ${{ secrets.PUSH_TO_PROTECTED_BRANCH }}
           
 
           branch: main
