--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,14 +3,12 @@ services:
    image: postgres:17
    environment:
      POSTGRES_DB: ${NDH_DB_NAME}
-     POSTGRES_USER: ${NDH_DB_USERNAME}
+     POSTGRES_USER: ${NDH_DB_USER}
      POSTGRES_PASSWORD: ${NDH_DB_PASSWORD}
    ports:
      - "5432:5432"
    volumes:
      - postgres_data:/var/lib/postgresql/data
-     - ../db/sql/schemas/ndh.sql:/docker-entrypoint-initdb.d/ndh.sql
-     - ../db/sql/inserts/sample_data.sql:/docker-entrypoint-initdb.d/sample_data.sql
    env_file:
      - .env
  
@@ -28,7 +26,7 @@ services:
      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
      DATABASE_ENGINE: ${NDH_DB_ENGINE}
      NDH_DB_NAME: ${NDH_DB_NAME}
-     NDH_DB_USER: ${NDH_DB_USERNAME}
+     NDH_DB_USER: ${NDH_DB_USER}
  
      NDH_DB_PASSWORD: ${NDH_DB_PASSWORD}
      NDH_DB_HOST: ${NDH_DB_HOST}
