--- a/src/.env_template
+++ b/src/.env_template
@@ -1,12 +1,12 @@
-NDH_DJANGO_SECRET=''
-NDH_DB_USER=''
-NDH_DB_PASSWORD=''
-NDH_DB_HOST=''
-NDH_DB_NAME=''
-NDH_DB_PORT=5432
-NDH_DB_ENGINE='django.db.backends.postgresql'
+NPD_DJANGO_SECRET=''
+NPD_DB_USER=''
+NPD_DB_PASSWORD=''
+NPD_DB_HOST=''
+NPD_DB_NAME=''
+NPD_DB_PORT=5432
+NPD_DB_ENGINE='django.db.backends.postgresql'
 DEBUG=True
 DJANGO_ALLOWED_HOSTS=['localhost', '127.0.0.1']
 DJANGO_LOGLEVEL='WARNING'
-NDH_PROJECT_NAME='[Project Name]'
+NPD_PROJECT_NAME='[Project Name]'
 CACHE_LOCATION = ''
