--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  
+          token: ${{ secrets.PUSH_TOKEN_PAT }}
 
       - name: Update contributor list
         id: contrib_list
@@ -68,12 +69,4 @@ jobs:
           git pull
           git add COMMUNITY.md
           git commit -m "update contributors count to $CONTRIBUTORS" || exit 0
-
-      - name: Push protected
-        uses: CasperWA/push-protected@v2
-        with:
-          
-          token: ${{ secrets.CONTRIBUTOR_TOKEN }}
-          
-
-          branch: main
+          git push
