excuse old secret incidents that have since been remediated
Signed-off-by: Isaac Milarsky <imilarsky@gmail.com>

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -8,6 +8,9 @@ paths = [
   '''\.gitleaks\.toml''',
   '''\src/.env'''
 ]
+commits = [
+  "841f5fc02cc5f3e5bc086b645e1fa8ac49fa1a8e" #Old violation of terraform secret upload
+]
 
 # --- Common Secrets ---
 [[rules]]
