--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,37 +1,55 @@
 services:
- db:
-   image: postgres:17
-   environment:
-     POSTGRES_DB: ${NPD_DB_NAME}
-     POSTGRES_USER: ${NPD_DB_USER}
-     POSTGRES_PASSWORD: ${NPD_DB_PASSWORD}
-   ports:
-     - "5432:5432"
-   volumes:
-     - postgres_data:/var/lib/postgresql/data
-   env_file:
-     - .env
- 
- django-web:
-   build: .
-   container_name: npd
-   ports:
-     - "8000:8000"
-   depends_on:
-     - db
-   environment:
-     NPD_DJANGO_SECRET: ${NPD_DJANGO_SECRET}
-     DEBUG: ${DEBUG}
-     DJANGO_LOGLEVEL: ${DJANGO_LOGLEVEL}
-     DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
-     DATABASE_ENGINE: ${NPD_DB_ENGINE}
-     NPD_DB_NAME: ${NPD_DB_NAME}
-     NPD_DB_USER: ${NPD_DB_USER}
- 
-     NPD_DB_PASSWORD: ${NPD_DB_PASSWORD}
-     NPD_DB_HOST: ${NPD_DB_HOST}
-     NPD_DB_PORT: ${NPD_DB_PORT}
-   env_file:
-     - .env
+  db:
+    image: 'postgres:17'
+    environment:
+      POSTGRES_DB: '${NPD_DB_NAME}'
+      POSTGRES_USER: '${NPD_DB_USER}'
+      POSTGRES_PASSWORD: '${NPD_DB_PASSWORD}'
+    ports:
+      - '5432:5432'
+    volumes:
+      - 'postgres_data:/var/lib/postgresql/data'
+    networks:
+      - npd
+    env_file:
+      - .env
+  db-migrations:
+    image: 'flyway/flyway:10'
+    command: >-
+      -url=jdbc:postgresql://db:5432/${NPD_DB_NAME} -user=${NPD_DB_USER}
+      -password=${NPD_DB_PASSWORD} -connectRetries=60 migrate
+    volumes:
+      - '../db/sql/schemas:/flyway/sql'
+    networks:
+      - npd
+    depends_on:
+      - db
+    env_file:
+      - .env
+  django-web:
+    build: .
+    container_name: npd
+    ports:
+      - '8000:8000'
+    depends_on:
+      db-migrations:
+        condition: service_completed_successfully
+    networks:
+      - npd
+    environment:
+      NPD_DJANGO_SECRET: '${NPD_DJANGO_SECRET}'
+      DEBUG: '${DEBUG}'
+      DJANGO_LOGLEVEL: '${DJANGO_LOGLEVEL}'
+      DJANGO_ALLOWED_HOSTS: '${DJANGO_ALLOWED_HOSTS}'
+      DATABASE_ENGINE: '${NPD_DB_ENGINE}'
+      NPD_DB_NAME: '${NPD_DB_NAME}'
+      NPD_DB_USER: '${NPD_DB_USER}'
+      NPD_DB_PASSWORD: '${NPD_DB_PASSWORD}'
+      NPD_DB_HOST: '${NPD_DB_HOST}'
+      NPD_DB_PORT: '${NPD_DB_PORT}'
+    env_file:
+      - .env
 volumes:
-   postgres_data:
+  postgres_data: null
+networks:
+  npd: null
