--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       -url=jdbc:postgresql://db:5432/${NPD_DB_NAME} -user=${NPD_DB_USER}
       -password=${NPD_DB_PASSWORD} -connectRetries=60 migrate
     volumes:
-      - '../db/sql/schemas:/flyway/sql'
+      - '../db/sql/migrations:/flyway/sql'
     networks:
       - npd
     depends_on:
