Flyway local config
Use flyway environment variables to provide database creds

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -15,11 +15,13 @@ services:
       - .env
   db-migrations:
     image: 'flyway/flyway:10'
-    command: >-
-      -url=jdbc:postgresql://db:5432/${NPD_DB_NAME} -user=${NPD_DB_USER}
-      -password=${NPD_DB_PASSWORD} -connectRetries=60 migrate
+    command: migrate
     volumes:
       - '../db/sql/migrations:/flyway/sql'
+    environment:
+      FLYWAY_URL: jdbc:postgresql://${NPD_DB_HOST}:${NPD_DB_PORT}/${NPD_DB_NAME}
+      FLYWAY_USER: ${NPD_DB_USER}
+      FLYWAY_PASSWORD: ${NPD_DB_PASSWORD}
     networks:
       - npd
     depends_on:
