remove extra quotes

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   db:
     image: 'postgres:17'
     environment:
-      POSTGRES_DB: '${NPD_DB_NAME}'
-      POSTGRES_USER: '${NPD_DB_USER}'
-      POSTGRES_PASSWORD: '${NPD_DB_PASSWORD}'
+      POSTGRES_DB: ${NPD_DB_NAME}
+      POSTGRES_USER: ${NPD_DB_USER}
+      POSTGRES_PASSWORD: ${NPD_DB_PASSWORD}
     ports:
       - '5432:5432'
     volumes:
@@ -39,16 +39,16 @@ services:
     networks:
       - npd
     environment:
-      NPD_DJANGO_SECRET: '${NPD_DJANGO_SECRET}'
-      DEBUG: '${DEBUG}'
-      DJANGO_LOGLEVEL: '${DJANGO_LOGLEVEL}'
-      DJANGO_ALLOWED_HOSTS: '${DJANGO_ALLOWED_HOSTS}'
-      DATABASE_ENGINE: '${NPD_DB_ENGINE}'
-      NPD_DB_NAME: '${NPD_DB_NAME}'
-      NPD_DB_USER: '${NPD_DB_USER}'
-      NPD_DB_PASSWORD: '${NPD_DB_PASSWORD}'
-      NPD_DB_HOST: '${NPD_DB_HOST}'
-      NPD_DB_PORT: '${NPD_DB_PORT}'
+      NPD_DJANGO_SECRET: ${NPD_DJANGO_SECRET}
+      DEBUG: ${DEBUG}
+      DJANGO_LOGLEVEL: ${DJANGO_LOGLEVEL}
+      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
+      DATABASE_ENGINE: ${NPD_DB_ENGINE}
+      NPD_DB_NAME: ${NPD_DB_NAME}
+      NPD_DB_USER: ${NPD_DB_USER}
+      NPD_DB_PASSWORD: ${NPD_DB_PASSWORD}
+      NPD_DB_HOST: ${NPD_DB_HOST}
+      NPD_DB_PORT: ${NPD_DB_PORT}
     env_file:
       - .env
 volumes:
