make sure that we are writing test results to xml for github checks later
Signed-off-by: Isaac Milarsky <imilarsky@gmail.com>

--- a/backend/docker-compose-test.yml
+++ b/backend/docker-compose-test.yml
@@ -33,6 +33,7 @@ services:
       - npd
   django-test:
     build: .
+    user: "${UID}:${GID}"  # UID and GID from host
     container_name: npd-test
     depends_on:
       db-test:
@@ -56,5 +57,7 @@ services:
       - .env
     command: >
       sh -c "python manage.py test"
+    volumes:
+      - ./artifacts:/tmp
 networks:
   npd:
