--- a/backend/docker-compose-test.yml
+++ b/backend/docker-compose-test.yml
@@ -33,7 +33,6 @@ services:
       - npd
   django-test:
     build: .
-    user: "${UID}:${GID}"  # UID and GID from host
     container_name: npd-test
     depends_on:
       db-test:
@@ -58,6 +57,6 @@ services:
     command: >
       sh -c "python manage.py test"
     volumes:
-      - ./artifacts:/tmp
+      - ./artifacts:/artifacts
 networks:
   npd:
